# nuxtemplate

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  auth.d.ts  docker-compose.prod.yml  docker-compose.yml  env.d.ts  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  release.config.js  release.config.mjs  tailwind.config.ts
.github/workflows/: deploy.yml  integrate.yml  release.yml
.husky/: pre-commit
app/: app.vue
app/middleware/: guest.ts
app/pages/: index.vue
app/pages/auth/: signin.vue  signup.vue
native/: Cargo.toml  tauri.conf.json
prisma/: dev.db  dev.db-journal  schema.prisma  seed.ts
public/services/: sw-push.js
server/api/user/: index.post.ts
server/emails/: OTPTemplate.vue  index.ts
server/middleware/: auth-bearer.ts
server/routes/auth/: email.post.ts  google.get.ts
server/types/: auth.d.ts
server/utils/: generate-code.ts  prisma.ts
shared/types/: auth.ts
shared/utils/: change-case.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
test/: load.test.ts
