[package]
name = "nuxtemplate"
description = "Nuxt + Typescript + Tailwind + Tauri Template"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/shba007/nuxtemplate.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
