[package]
name = "nuxtemplate"
description = "Nuxt + Typescript + Tailwind + Tauri Template"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "MIT"
repository = "https://github.com/shba007/nuxtemplate.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
